# dataset_df

./: .gitignore  README.md  pyproject.toml
AASIST/: Dockerfile  requirements.txt
AASIST/notebooks/: AASIST-inference.ipynb
SLSforASVspoof/: Dockerfile
SLSforASVspoof/notebooks/: SLS-inference.ipynb
SSL_Anti-spoofing/: Dockerfile  requirements.txt
SSL_Anti-spoofing/notebooks/: SSL-inference.ipynb
data/scores/aasist/: aasist_asvspoof2019LAeval_scores.pkl
deepfake_eval/: __init__.py  metrics.py  path_utils.py  plotting.py  utils.py
deepfake_eval/loaders/: __init__.py  asvspoof2019_loader.py  asvspoof2021_loader.py  base_loader.py  brspeech_df_loader.py
evaluation/: df_detection_evaluation.ipynb  eval_metrics.ipynb  eval_metrics.py
examples/calibration/: aasist_calib_on_asvspoof2019LA.ipynb  sls_calib_on_asvspoof2021DF.ipynb  ssl_calib_on_asvspoof2021DF.ipynb
examples/evaluation/: aasist_eval_on_brspeech_df.ipynb  sls_eval_on_brspeech_df.ipynb  ssl_eval_on_brspeech_df.ipynb
models/aasist/: Dockerfile
models/aasist/notebooks/: AASIST-inference.ipynb
models/sls/: Dockerfile  requirements.txt
models/sls/notebooks/: SLS-inference.ipynb
models/ssl_antispoof/: Dockerfile  requirements.txt
models/ssl_antispoof/notebooks/: SSL-inference.ipynb
models/xlsr_mamba/: Dockerfile  notebook_requirements.txt
models/xlsr_mamba/notebooks/: XLSR-Mamba-inference.ipynb
